<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actiivty.SignUpActivity"
    android:background="@android:color/holo_blue_light">

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginStart="32dp"
        android:background="@android:color/white"
        android:layout_marginTop="100dp"
        android:elevation="10dp"
        android:hint="@string/email_hint"
        android:padding="15dp"
        android:textColor="@android:color/black"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:background="@android:color/white"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginStart="32dp"
        android:elevation="10dp"
        android:layout_marginTop="32dp"
        android:hint="@string/password_hint"
        android:padding="15dp"
        android:textColor="@android:color/black"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="@+id/et_email"
        app:layout_constraintStart_toStartOf="@+id/et_email"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/sign_up_btn"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="@+id/et_password"
        app:layout_constraintStart_toStartOf="@+id/et_password"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <TextView
        android:id="@+id/tv_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:clickable="true"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btn_register"
        app:layout_constraintStart_toStartOf="@+id/btn_register"
        app:layout_constraintTop_toBottomOf="@+id/btn_register" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:indeterminate="true"
        android:visibility="gone"
        android:id="@+id/progressBar"
        android:indeterminateTint="@android:color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>